# break_timer

./: .gitignore  README.md  index.html  overlay.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.svelte  Overlay.svelte  cron-builder.js  global.css  main.js  overlay.css  overlay.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: CronBuilder.svelte  hotkey.js
